--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
     <!-- 5 Objek Visual -->
     <div class="form-group">
-      <label>5. Objek Visual</label>
-      <input id="objectVisual" placeholder="Contoh: Botol serum transparan di meja aesthetic" />
+      <label>5. Objek /lokasi</label>
+      <input id="objectVisual" placeholder="Contoh: botol/kamar," />
     </div>
 
     <!-- 6 Element Script -->
@@ -134,7 +134,7 @@
 
     <div class="result-header">
       <div class="result-title">
-        📄 Hasil Prompt Siap Kirim ke Veo / Kling
+        📄 Hasil Prompt profesional siap pakai🔥
       </div>
     </div>
 
