--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!-- 5 Objek Visual -->
     <div class="form-group">
-      <label>5. Objek /lokasi</label>
+      <label>5. object visual / lokasi</label>
       <input id="objectVisual" placeholder="Contoh: botol/kamar," />
     </div>
 
