--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
     <div class="form-group">
       <label>4. Karakter / Target Audience</label>
       <select id="audience">
-        <option value="Remaja">Remaja</option>
-        <option value="Mahasiswa">Mahasiswa</option>
-        <option value="Ibu Rumah Tangga">Ibu Rumah Tangga</option>
-        <option value="Freelancer">Freelancer</option>
-        <option value="Pebisnis">Pebisnis</option>
-        <option value="General Audience">General Audience</option>
-      </select>
+  <option value="Pria Remaja">Pria Remaja</option>
+  <option value="Wanita Remaja">Wanita Remaja</option>
+  <option value="Ibu Rumah Tangga">Ibu Rumah Tangga</option>
+  <option value="Pria Dewasa">Pria Dewasa</option>
+  <option value="Orang Tua">Orang Tua</option>
+  <option value="Anak Anak">Anak Anak</option>
+</select>
     </div>
 
     <!-- 5 Objek Visual -->
