--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <div class="logo">🎬</div>
     <h1>AI CAMPAIGN PROMPT BUILDER</h1>
     <p>Buat 1 Karakter Konsisten untuk Banyak Video 6 Detik</p>
+
+    <div class="header-actions">
+      <button id="openTemplateLibrary" class="secondary-btn">
+        📚 Template Library
+      </button>
+    </div>
   </div>
 
   <!-- FORM -->
@@ -101,7 +107,8 @@
     </div>
 
     <div class="info-box">
-      🔥 STEP 1: Copy <b>GLOBAL IMAGE PROMPT</b> → Generate gambar karakter di GPT Image. <br><br>
+      🔥 STEP 1: Copy <b>GLOBAL IMAGE PROMPT</b> → Generate gambar karakter di GPT Image.
+      <br><br>
       🔥 STEP 2: Upload gambar tersebut ke Veo / Kling → Gunakan <b>VIDEO PROMPT</b> untuk tiap adegan 6 detik.
     </div>
 
