--- a/templates.html
+++ b/templates.html
@@ -29,7 +29,6 @@
         <option value="hook">Hook Powerful</option>
         <option value="solution">Solusi Produk</option>
         <option value="cta">Call To Action</option>
-        <option value="emotional">Emotional Story</option>
       </select>
     </div>
   </div>
@@ -38,6 +37,6 @@
 
 </div>
 
-<script src="templates.js"></script>
+<script type="module" src="templates.js"></script>
 </body>
 </html>
