--- a/templates.html
+++ b/templates.html
@@ -12,6 +12,7 @@
 
 <div class="wrapper">
 
+  <!-- HEADER -->
   <div class="header">
     <div class="logo">📚</div>
     <h1>TEMPLATE LIBRARY</h1>
@@ -22,21 +23,22 @@
     </button>
   </div>
 
+  <!-- CATEGORY SELECT -->
   <div class="card">
     <div class="form-group">
       <label>Pilih Kategori Template</label>
-      <select id="templateCategory">
-        <option value="hook">Hook Powerful</option>
-        <option value="solution">Solusi Produk</option>
-        <option value="cta">Call To Action</option>
-      </select>
+      <!-- DIISI OTOMATIS OLEH JS -->
+      <select id="templateCategory"></select>
     </div>
   </div>
 
+  <!-- TEMPLATE OUTPUT -->
   <div id="templateContainer"></div>
 
 </div>
 
+<!-- WAJIB MODULE -->
 <script type="module" src="templates.js"></script>
+
 </body>
 </html>
