--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <!-- HEADER -->
   <div class="header">
     <div class="logo">🎬</div>
-    <h1>AI CAMPAIGN PROMPT BUILDER</h1>
-    <p>Buat 1 Karakter Konsisten untuk Banyak Video 6 Detik</p>
+    <h1>🫆JAWARA AI🫆</h1>
+    <p>Buat 1 Karakter Konsisten untuk Banyak Video</p>
 
     <div class="header-actions">
       <button id="openTemplateLibrary" class="secondary-btn">
