--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="header">
     <div class="logo">🎬</div>
     <h1>🫆JAWARA AI🫆</h1>
-    <p>Buat 1 Karakter Konsisten untuk Banyak Video</p>
+    <p>Hasilkan 1 Karakter dan Generate Banyak Video</p>
 
     <div class="header-actions">
       <button id="openTemplateLibrary" class="secondary-btn">
